--- a/LAB8/src/sample/sample.fxml
+++ b/LAB8/src/sample/sample.fxml
@@ -13,18 +13,25 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@style.css">
+<BorderPane stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <MenuBar BorderPane.alignment="CENTER" style="-fx-text-fill: black">
+      <MenuBar style="-fx-text-fill: black;" BorderPane.alignment="CENTER">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
+          <Menu mnemonicParsing="false" >
+            <graphic>
+               <Label style="-fx-text-fill: darkslategray" text="File"/>
+            </graphic>
+             <items>
+                  <MenuItem mnemonicParsing="false" text="Open" onAction="#handleOpenAction"/>
+                  <MenuItem mnemonicParsing="false" text="Save" onAction="#handleSaveAction" />
+                  <MenuItem mnemonicParsing="false" text="Import" onAction="#handleImportAction"/>
+                  <MenuItem mnemonicParsing="false" text="Export" onAction="#handleExportAction"/>
               <MenuItem mnemonicParsing="false" onAction="#handleCloseAction" text="Close" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" onAction="#handleAboutAction">
                <graphic>
-                  <Label onMouseClicked="#handleAboutAction" text="About" />
+                  <Label onMouseClicked="#handleAboutAction" style="-fx-text-fill: darkslategray;" text="About" />
                </graphic></Menu>
         </menus>
       </MenuBar>
@@ -42,7 +49,7 @@
             <VBox alignment="TOP_CENTER" HBox.hgrow="ALWAYS">
                <children>
                   <Region minHeight="25.0" />
-                  <Label alignment="CENTER" fx:id="todoLabel" contentDisplay="CENTER" text="TODO" textAlignment="CENTER" />
+                  <Label fx:id="todoLabel" alignment="CENTER" contentDisplay="CENTER" text="TODO" textAlignment="CENTER" />
                   <ScrollPane fitToHeight="true" fitToWidth="true" VBox.vgrow="ALWAYS">
                      <content>
                         <ListView fx:id="todoList">
